--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="matter.js"></script>
     <script src="Ground.js"></script>
     <script src="dustbin.js"></script>
+    <script src="side.js"></script>
     <script src="paperBall.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
