--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="p5.sound.min.js"></script>
     <script src="matter.js"></script>
     <script src="Ground.js"></script>
+    <script src="Slingshot.js"></script>
     <script src="dustbin.js"></script>
     <script src="side.js"></script>
     <script src="paperBall.js"></script>
